--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>Мы оставляем за собой право обновлять данную политику конфиденциальности. Все изменения будут опубликованы на этой странице. Пожалуйста, периодически проверяйте её для получения актуальной информации.</p>
 
         <h2>Контакты</h2>
-        <p>Если у вас есть вопросы по поводу данной политики конфиденциальности, свяжитесь с нами по адресу: <a href="mailto:support@example.com">support@example.com</a>.</p>
+        <p>Если у вас есть вопросы по поводу данной политики конфиденциальности, свяжитесь с нами по адресу: <a href="mailto:kokdenism2@gmail.com">kokdenism2@gmail.com</a>.</p>
     </div>
 </body>
 </html>
